Fixed improper display on mobile

--- a/src/components/css/contentPage.css
+++ b/src/components/css/contentPage.css
@@ -9,7 +9,6 @@
 
 .contentDiv {
   height: 100%;
-  overflow-y: scroll;
 }
 
 .contentTitle {
